# logseq-mcp

./: .env.example  .gitignore  LICENSE  README.md  debug_journal.py  deploy.sh  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/logseq_mcp_server/: __init__.py  __main__.py  logging_config.py  server.py
src/logseq_mcp_server/logseq/: __init__.py  client.py  models.py
src/logseq_mcp_server/prompts/: __init__.py
src/logseq_mcp_server/resources/: __init__.py
src/logseq_mcp_server/tools/: __init__.py  blocks.py  pages.py  queries.py
src/logseq_mcp_server/utils/: __init__.py  date_converter.py  date_converter_extended.py  sanitizer.py
tests/: conftest.py
tests/integration/: test_journal_tools.py  test_mcp_server.py
tests/tools/: README.md  __init__.py  test_cases.json  test_logseq.py
tests/unit/: test_date_converter.py  test_logseq_client.py  test_privacy_filter.py  test_sanitizer.py  test_tools.py
